Feature/review employee endpoints (#10)
* employee tags
* sonar issues
* add employee global id